fixing a git issue with a too big video preventing me from commiting

--- a/styles/projects.scss
+++ b/styles/projects.scss
@@ -16,8 +16,14 @@
     padding: 0;
     display: inline-flex;
     justify-content: center;
+    align-items: center;
     z-index: 1;
     user-select: none;
+
+    @media screen and (max-width: 414px) {
+        width: 100vw;
+        height: 100vh;
+    }
 
 }
 
@@ -33,7 +39,7 @@
 
             position: absolute;
             display: inline-block;
-            right: 18%;
+            right: 10%;
             height: 100%;
             overflow: hidden;
 
@@ -46,7 +52,7 @@
                 font-weight: $bold;
                 writing-mode: vertical-rl;
                 transform: scale(-1);
-                letter-spacing: 0.1em;
+                letter-spacing: 0.12em;
                 text-align: end;
                 user-select: none;
                 text-transform: uppercase;
@@ -83,7 +89,7 @@
 
             position: absolute;
             top: 50%;
-            left:20%;
+            left:10%;
             display: flex;
             flex-direction: column;
 
@@ -103,7 +109,7 @@
 
         position: absolute;
         bottom: 5%;
-        left: 20%;
+        left: 10%;
         user-select: none;
 
             &__clip-reveal {
@@ -148,13 +154,17 @@
 
 .project-video {
 
-    // width: 60%;
-    // width: 50%;
     width: 45%;
     height: 100%;
     margin: 0;
     position: absolute;
     z-index: 10;
+
+    @media screen and (max-width: 414px) {
+        width: 75%;
+        height: 40%;
+        // height: 50vh;
+    }
 }
 
 .cta_click-drag {
